# crypto_tax

./: README.md  pyproject.toml
src/crypto_tax/: main.py
src/crypto_tax/classes/: Asset.py  Report.py  Transaction.py
src/crypto_tax/dataset/: trades 2024.csv  trades all.csv
src/crypto_tax/loaders/: Kraken_trades.py  buid_portfolio.py  build_report.py
