[project]
name = "crypto-tax"
version = "0.1.0"
description = ""
authors = [
    {name = "jean Bertholat",email = "jean.bertholat@alten.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "src"},
    {include = "crypto_tax", from = "src"},
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
